--- a/frontend/dashboard.css
+++ b/frontend/dashboard.css
@@ -6,66 +6,80 @@
     font-family: "Roboto", sans-serif;
 }
 
-/* DASHBOARD TRANSACTION TABLE */
-.table{
-    position: absolute;
-    width: 50%;
-    top: 10%;
-    left: 21%;
-    text-align: center;
-    padding:10px;
-    font-weight: bold;
-    font-size: 15px;
-    border-radius: 10px;
-    box-shadow: 3px 3px 3px 3px rgb(233, 233, 233);
+body{
+    background-color: #343541;
 }
+
+/* DASHBOARD TRANSACTION TABLE */
+.table {
+  width: 50%;
+  margin-top: 700px;
+  margin-left: 480px;   
+  text-align: center;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  border-radius: 10px;
+  background: white;
+  box-shadow: 3px 3px 3px 3px #343541;
+  border: 1px solid pink;
+}
+
 /* DASHBOARD TRANSACTION TABLE */
 
 /* DASHBOARD PIECHART */
 .pieChart{
-    border-radius: 10px;
-    height: 250px;
-    width: 350px;
-    box-shadow: 3px 3px 3px 3px rgb(231, 231, 231);
+    background: red;
+    width: 30%;
+    height: 47%;
+    box-shadow: 3px 3px 3px 3px #343541;
     position: absolute;
-    top: 10%;
-    left: 72%;
+    top: 18%;
+    left: 57%;
 }
+
+
 /* DASHBOARD PIECHART */
 
 
 /* NAVIGATION */
 
 .dashboardContainer{
-    position: absolute;
-    left: 0%;
-    width: 20%;
-    height: 100vh;
-    background: rgb(90, 90, 255);
-     box-shadow: 3px 3px 3px 3px rgb(243, 243, 243);
+background-color: #202123;
+height: 45px;
 }
 
 .dashboardContainer a{
+   text-decoration: none;
     color: white;
-    text-decoration: none;
-    padding-left: 10px;
-    font-size: 27px;
+   font-size: 20px;
+   font-weight: bold;
+   font-family: "Roboto", sans-serif;
 }
 
 .dashboardContainer li{
-    list-style: none;
-    box-shadow: 0px 1.5px 0px 0px rgb(58, 58, 193);
-    padding: 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+  list-style-type: none;
 }
 
-#dashLogo{
-    color: white;
-    font-size: 33px;
-    text-align: center;
-    padding:0px 0px 30px 0px;
-    box-shadow: 0px 1.5px 0px 0px rgb(58, 58, 193);
+.dashboardContainer ul{
+    display: flex;
+    justify-content: flex-end;
 }
+
 /* NAVIGATION */
+
+/* Welcome */
+.welcome{
+    color: white;
+    position: absolute;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%,-50%);
+}
+/* WELCOME */
+
 
 #transaction-title{
     font-size: 20px;
@@ -76,20 +90,21 @@
 
 .transactionsForm{
     position: absolute;
-    top: 20%;
-    left: 34%;
-    box-shadow: 3px 3px 3px 3px rgb(233, 233, 233);
+    top: 18%;
+    left: 14%;
+    box-shadow: 3px 3px 3px 3px #343541;
     width: 30%;
-    height: 63%;
+    height: 45%;
     padding: 10px;
     border-radius: 10px;
+    background: white;
 }
 
 .transactionsForm input{
     display: flex;
     justify-content: column;
     width: 90%;
-    height: 33px;
+    height: 43px;
     padding-left: 10px;
     margin-top: 23px;
     margin-left: 13px;
@@ -98,11 +113,11 @@
 
 .transactionsForm button{
     position: inherit;
-    left: 28.7%;
-    width: 40%;
+    left: 20%;
+    width: 60%;
     text-align: center;
     height: 33px;
-    margin-top: 14px;
+    margin-top: 24px;
 }
 
 #inputBtn{
@@ -115,10 +130,10 @@
 }
 
 .transSelect{
-    width: 94.5%;
-    height: 33px;
+    width: 92.5%;
+    height: 43px;
     margin-top: 23px;
-    margin-left: 10px;
+    margin-left: 13px;
     padding-left: 10px;
 }
 
@@ -126,8 +141,8 @@
 /* ALL BUTTONS */
 #deleteBtn{
     position: absolute;
-    left: 23.8%;
-    top: -2%;
+    left: 25%;
+    top: 70%;
     padding: 10px;
     width: 13%;
 }
@@ -161,10 +176,50 @@
 
  @media (max-width:1308px){
 
+   body{
+    background: red;
+   }
+
+   .table{
+    margin-top: 495px;
+    margin-left: 320px;
+   }
+
+   .transactionsForm{
+    top: 15%;
+    height: 55%;
+   }
+   .table{
+    top: 90%;
+   }
+   .pieChart{
+    top: 15%;
+    height: 58%;
+   }
+
+   .btnStyling{
+    top: 82%;
+   }
+ 
+  }
+  
+
+
+  @media (max-width:1000px) {
+    
+     .table{
+        left: 10%;
+        width: 45%;
+    }
+
+     body{
+        background-color: rgb(0, 255, 42);
+    }
+   
     .dashboardContainer {
       position: fixed;
       left: -100%;   /* hide off screen */
-      width: 29.5%;    /* make it take up 70% of screen */
+      width: 100%;   
       transition: left 0.3s ease;
       z-index: 999;
   }
@@ -178,32 +233,6 @@
       left: 0;
   }
   
-    .table{
-        left: 10%;
-        width: 45%;
-    }
-
-    .pieChart{
-        left: 57%;
-        width: 300px;
-        height: 150px;
-    }
-
-    .dashboardContainer a{
-        font-size: 23px;
-    }
- 
-  }
-  
-
-
-  @media (max-width:1000px) {
-    
-     .table{
-        left: 10%;
-        width: 45%;
-    }
-
 }
 
 
