--- a/frontend/dashboard.css
+++ b/frontend/dashboard.css
@@ -29,7 +29,7 @@ body{
 
 /* DASHBOARD PIECHART */
 .pieChart{
-    background: red;
+   
     width: 30%;
     height: 47%;
     box-shadow: 3px 3px 3px 3px #343541;
@@ -176,9 +176,7 @@ height: 45px;
 
  @media (max-width:1308px){
 
-   body{
-    background: red;
-   }
+  
 
    .table{
     margin-top: 495px;
@@ -207,17 +205,63 @@ height: 45px;
 
   @media (max-width:1000px) {
     
-     .table{
+     .welcome{
+        font-size: 30px;
+        width: 100%;
+        margin-left: 19.5%;
+     }
+
+    .pieChart{
+        font-size: 30px;
+        top: 14.5%;
         left: 10%;
-        width: 45%;
+        height: 30%;
+        width: 80%;
     }
 
-     body{
-        background-color: rgb(0, 255, 42);
+    #piechart{
+        font-size: 30px;
     }
+
+    
    
+    #transaction-title{
+        font-size: 30px;
+    }
+
+    .transactionsForm{
+        top: 49%;
+        left: 10%;
+        height: 25%;
+        width: 77.9%;
+    }
+    
+    .transactionsForm input,.transactionsForm select{
+        font-size: 30px;
+        border: 1px solid grey;
+        padding-top: 10px;
+    }
+
+    .btnStyling{
+        font-size: 30px;
+    }
+
+    #deleteBtn{
+        width: 50%;
+       top: 78%;
+       left: 10%;
+    }
+
+    .table{
+        font-size: 30px;
+        width: 80%;
+       margin-top: 1780px;
+       margin-left: 100px;
+    }
+
     .dashboardContainer {
       position: fixed;
+      top: 0%;
       left: -100%;   /* hide off screen */
       width: 100%;   
       transition: left 0.3s ease;
@@ -238,36 +282,3 @@ height: 45px;
 
 
   
- @media (max-width:808px){
-    
-   
-
-    #deleteBtn{
-        left: 20%;
-        width: 50%;
-        height: 5%;
-    }
-    .table{
-        top: 30%;
-        right: 30%;
-        width: 85%;
-    }
-    
-    .pieChart{
-        left: 15%;
-    }
-
-    .dashboardContainer {
-   
-      width: 35.5%;    
-     
-  }
-
-  #transactionsForm{
-    width: 60%;
-    height: 45%;
-    left: 25%;
-  }
-
- 
-  }
